--- a/Client/views/login.html
+++ b/Client/views/login.html
@@ -5,7 +5,7 @@
         <title> Sign-in or Sign-up</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="../public/style/login.css">
+        <link rel="stylesheet" href="/style/login.css">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">      <!--icons for fb, google, etc-->
     </head>
 
@@ -59,7 +59,7 @@
         </div>
     </body>
     <footer>
-        <!-- <script src="main.js"></script> -->
+        <script src="js/login.js"></script>
     </footer>
 
 </html>
