solved some bugs. signin and signup server and client working

--- a/Client/public/style/login.css
+++ b/Client/public/style/login.css
@@ -188,7 +188,7 @@ a{
     margin: 20px 0;                                 /* top and bottom spacing for social icons */
 }
 .container-social-icons a {                         /* Social Media Icons */
-    color: #d4748a;
+    color: #2c1218;
     background: #ddd;
     border: 1px solid white;
     border-radius:50%;
