--- a/CLIENT_REACT/play-share-app/public/login/login.css
+++ b/CLIENT_REACT/play-share-app/public/login/login.css
@@ -3,7 +3,7 @@
 @import url('https://fonts.google.com/specimen/Montserrat?selection.family=Montserrat:wght@400;800&sidebar.open=true');
 
 :root{
-    --background-color: #ddd;
+    --background-color: linear-gradient(-25deg,#d48ee6,  #ec699b, #e98363);/* #ddd;        #ac1962,  #E73C7E, #EE7752*/
 
     --form-background-color: white;    
     --form-text-color: black; 
