--- a/CLIENT_REACT/play-share-app/src/JSX/Components/posts.css
+++ b/CLIENT_REACT/play-share-app/src/JSX/Components/posts.css
@@ -5,7 +5,7 @@
     width: 920px;
 
     margin: 10px;
-    background: rgb(199, 202, 207);
+    /* background: rgb(199, 202, 207); */
     border-radius: 20px;
 }
 
