--- a/CLIENT_REACT/play-share-app/src/JSX/Components/post.css
+++ b/CLIENT_REACT/play-share-app/src/JSX/Components/post.css
@@ -8,11 +8,15 @@
 
     margin-top: 10px;
     margin-bottom: 10px;
-    padding: 8px;
+
+    padding-top: 20px;
+    padding-bottom: 25px;
+    padding-left: 37px;
+    padding-right: 37px;
     width: 885px;
     height: 650px; 
 
-    background: #FFFFFF;
+    background: #ffffff;
     border-radius: 20px;
 
     display: flex; 
@@ -24,37 +28,77 @@
     flex-direction: column; 
     position: relative;
 }
+
+
+
 .post-top-container{
     position: relative;
-    margin-top: 15px;
-    margin-left: 15px;
-    height: 70px;
+    display: flex; 
+    flex-direction: row; 
     background: white;
+
+    height: 70px;
+    width: 800px;
+
 }
-.svg-stroke-container{
-    position: absolute;
-    margin-top: 4px;
+.post-top-container-left{
+    position: relative;
+    display: flex; 
+    flex-direction: row; 
+    
 }
 .post-top-handle{    
+    font-size: 36/16rem;
+    line-height: 45/16rem;
+    font-weight: normal;
+    color: #ABABAB;
+
+    padding-right: 20px;
+
+}
+.post-top-date{    
+    font-size: 1.5rem;
+    line-height: 1.5rem;
+    font-weight: normal;
+    color: #BFBFBF;
+    padding-right: 20px;
+} 
+
+
+.post-top-container-right{     
     position: absolute;
-    margin-top: 15px;
-    margin-left: 22px;
-    
+    display: flex; 
+    flex-direction: row; 
+    background: grey;
+
+    /* margin-top: 4px; */
+    /* width: 280 */
+    /* margin-left: 204px; */
+    /* background: grey; */
+}
+.post-top-groupName{
+
+    position: absolute;
+    /* margin-right: -581px;  */
+    font-family: Quicksand;
+    font-style: normal;
+    font-weight: normal;
     font-size: 36px;
     line-height: 45px;
-    font-weight: normal;
-    color: white;
-}
-.post-top-date{
-    position: absolute;
-    margin-top: 25px;
-    margin-left: 330px;
+    color: #FFFFFF;
 
-    font-size: 20px;
-    line-height: 25px;
-    font-weight: normal;
-    color: #a89797;
-} 
+    margin-right: -1416px;  
+
+}
+.svg-stroke-container{
+    margin-top: 5.495px;
+    margin-right: -1416px;  
+    /* position: absolute;
+    margin-right: -581px;  */
+
+}
+
+
 
 
 
@@ -62,12 +106,12 @@
 
 .post-title-content-container{
     position: relative;
-    margin-left: 15px;
+    /* margin-left: 15px; */
 }
 .post-title{
     width: 810px;
     height: 95px;
-    margin-left: 22px;
+    /* margin-left: 22px; */
 
     font-size: 30px;
     line-height: 45px;
@@ -77,17 +121,15 @@
 .post-content-img{
     width: 810px;
     height: 390px;
-    margin-left: 15px;
+    /* margin-left: 15px; */
     background-size:cover;
     background-repeat:no-repeat;
-
-    /* background: url(https://i.imgur.com/E5qVIoE.jpg); */
     border-radius: 20px;
 }
 .post-content-text{
     width: 810px;
     height: 390px;
-    margin-left: 15px;
+    /* margin-left: 15px; */
     border-radius: 20px;
 }
 
@@ -97,42 +139,56 @@
 
 
 .post-actions-constainer{
+    position: relative;
     display: flex; 
     flex-direction: row; 
-    margin-top: 10px;
-    margin-left: 30px;
-    margin-right: 30px;
+    margin-top: 5px;
+    margin-bottom: 10px;
 }
 
 .post-actions-left{
+    position: relative;
     display: flex; 
     flex-direction: row; 
-
+    width: 200px;
 }
-.post-arrows{
-    width: 50px;
-    height: 45px;
+.post-total-likes-text-div{
+    position: relative;
+    width: 100px;
     margin-top: 5px;
 }
 .post-total-likes-text{
+    /* position: absolute; */
+    margin-left: auto;
+    margin-right: auto;
     font-family: Quicksand;
-    Font-size: 45px;
-    line-height: 45px;
+    Font-size: 2.8125rem;
+    line-height: 2.8125rem;
     font-style: normal;
-    font-weight: normal;
-
-    margin-top: 5px;
-    margin-left: 10px;
-    margin-right: 10px;
+    font-weight: normal; 
+  
+    /* margin-top: -10px;
+ margin-left: auto;
+    margin-right: auto;
+    margin-left: 50px; */
+    /* margin-right: 10px;  */
 } 
 
+.post-arrows{
+    width: 2.8125rem;
+    height: 2.8125rem;
+    margin-top: 5px;
+}
+.post-arrow-up{
+    margin-left: 0px;
+}
+.post-arrow-down{
+    margin-right: 20px;
+}
 
 .post-actions-right{
     display: flex; 
     flex-direction: row; 
-    /* margin-top: 10px;
-    margin-right: 30px; */
-    float:right;
 }
 
 
@@ -151,3 +207,16 @@
     margin-right: auto;
     
 }
+
+.center-vertically {
+    /* margin: 0;
+    position: absolute;
+    top: 50%;
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%); */
+    display: flex;
+
+    justify-content: center;
+    align-items: center; 
+
+  }
