--- a/CLIENT_REACT/play-share-app/src/JSX/Components/post.css
+++ b/CLIENT_REACT/play-share-app/src/JSX/Components/post.css
@@ -51,7 +51,7 @@
     font-size: 36/16rem;
     line-height: 45/16rem;
     font-weight: normal;
-    color: #ABABAB;
+    color: #818080;
 
     padding-right: 20px;
 
@@ -60,8 +60,10 @@
     font-size: 1.5rem;
     line-height: 1.5rem;
     font-weight: normal;
-    color: #BFBFBF;
+    color: #a1a1a1;
     padding-right: 20px;
+    margin-top: 3px;
+
 } 
 
 
@@ -95,8 +97,8 @@
     margin-right: -1416px;  
     /* position: absolute;
     margin-right: -581px;  */
-
 }
+
 
 
 
@@ -120,7 +122,7 @@
 }
 .post-content-img{
     width: 810px;
-    height: 390px;
+    height: 400px;
     /* margin-left: 15px; */
     background-size:cover;
     background-repeat:no-repeat;
@@ -128,7 +130,7 @@
 }
 .post-content-text{
     width: 810px;
-    height: 390px;
+    height: 400px;
     /* margin-left: 15px; */
     border-radius: 20px;
 }
@@ -142,42 +144,34 @@
     position: relative;
     display: flex; 
     flex-direction: row; 
-    margin-top: 5px;
-    margin-bottom: 10px;
+    margin-top: 10px;
+    margin-bottom: 15px;
+    margin-left: 15px;
+
 }
 
 .post-actions-left{
     position: relative;
     display: flex; 
     flex-direction: row; 
-    width: 200px;
+    width: 400px;
 }
 .post-total-likes-text-div{
     position: relative;
-    width: 100px;
-    margin-top: 5px;
+    margin-left: 10px;
+    margin-right: 10px; 
 }
+
 .post-total-likes-text{
-    /* position: absolute; */
-    margin-left: auto;
-    margin-right: auto;
     font-family: Quicksand;
-    Font-size: 2.8125rem;
-    line-height: 2.8125rem;
+    Font-size: 2.5rem;
+    line-height: 2.5rem;
     font-style: normal;
     font-weight: normal; 
-  
-    /* margin-top: -10px;
- margin-left: auto;
-    margin-right: auto;
-    margin-left: 50px; */
-    /* margin-right: 10px;  */
 } 
-
 .post-arrows{
-    width: 2.8125rem;
-    height: 2.8125rem;
-    margin-top: 5px;
+    width: 2.5rem;
+    height: 2.5rem;
 }
 .post-arrow-up{
     margin-left: 0px;
@@ -185,13 +179,17 @@
 .post-arrow-down{
     margin-right: 20px;
 }
-
 .post-actions-right{
     display: flex; 
     flex-direction: row; 
 }
-
-
+.post-actions-left_background{
+    position: absolute;
+    margin-left: -30px;
+}
+rect{
+    fill:white;
+}
 
 
 
