--- a/CLIENT_REACT/play-share-app/src/JSX/Components/post.css
+++ b/CLIENT_REACT/play-share-app/src/JSX/Components/post.css
@@ -2,6 +2,10 @@
 /* FONT qUICKSAND: added <link href='http://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css'>to indexhtml */
 
 .post-body{
+    zoom: .75; 
+    /* -moz-transform: scale(3); 
+    -moz-transform-origin: 0 0; */
+
     font-family: Quicksand;
     font-style: normal;
     font-weight: normal;
@@ -14,7 +18,6 @@
     padding-left: 37px;
     padding-right: 37px;
     width: 885px;
-    /* height: 650px;  */
 
     background: #ffffff;
     border-radius: 20px;
@@ -96,13 +99,12 @@
 
 .post-title-content-container{
     position: relative;
-    /* margin-: 15px; */
     z-index: 1;
 }
 .post-title{
     width: 810px;
     height: 95px;
-    /* margin-left: 22px; */
+    margin-left: 10px;
 
     font-size: 30px;
     line-height: 45px;
@@ -214,7 +216,6 @@
 }
 .post-delete:hover {
     transform: scale(1.2);
-    fill:red;
 }
 
 .post-arrows:hover {
@@ -236,7 +237,6 @@
 .center {
     margin-left: auto;
     margin-right: auto;
-    
 }
 
 .center-vertically {
