Post UI redesign mostly done. Will now focus on file upload, s3

--- a/CLIENT/src/css/globalFeed.css
+++ b/CLIENT/src/css/globalFeed.css
@@ -1,6 +1,9 @@
 .global-feed-body{
     display: flex; 
-    flex-direction: row; 
+    flex-direction: column; 
+    flex-wrap: wrap;
+    justify-content: center;
+
     /* margin: 10px;
     border-radius: 20px; */
 
