--- a/CLIENT/src/css/makePostsIcon.css
+++ b/CLIENT/src/css/makePostsIcon.css
@@ -1,4 +1,4 @@
-.make-post-icon-div{
+/* .make-post-icon-div{
     position: relative;
     display: flex; 
     flex-direction: row; 
@@ -13,10 +13,39 @@
     top: 40px;
     left: 40px;
 }
+*/
+
+.floating-button{
+    padding:0;
+    margin:0;
+	position:fixed;
+	width:60px;
+    height:60px;
+	bottom:1rem;
+    right:1rem;
+    
+	background-color:rgb(0, 240, 180);
+	color:#FFF;
+	border-radius:50px;
+	text-align:center;
+    box-shadow: 2px 2px 3px #999;
+
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    
+}
+
+.plus-icon{
+    /* margin-top:24.4px; */
+    /* transform: scale(1.6); */
+   
+
+}
 
 
-
-
-
-
-
+.post-floating-button:hover {
+    transform: scale(1.1);
+}
