--- a/CLIENT/src/css/makePost.css
+++ b/CLIENT/src/css/makePost.css
@@ -1,121 +1,153 @@
+:root {
+    --makePost-tab-padding: 0rem 2rem 0rem 2rem;
+}
 
-.make-post-div{
-    position: relative;                      
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    flex-wrap: wrap;   
-    /* align-items: center;         */
-    align-items: stretch;
+@media screen and (max-width: 540px) {
+    :root {
+        --makePost-tab-padding: 0rem 1rem 0rem 1rem;
+    }
+}
+@media screen and (max-width: 450px) {
+    :root {
+        --makePost-tab-padding: 0rem .75rem 0rem .75rem;
+    }
+}
 
-    outline: none;
-    border:none;
-    border-radius: 20px;
-    background: white;
+@media screen and (max-width: 400px) {
+    :root {
+        --makePost-tab-padding: 0rem .35rem 0rem .35rem;
+    }
+}
 
-    padding: 20px 20px;
-    margin: 10px;
-    min-width: 600px;
-    max-width: 650px;
-
+#makePost-form{
     font-family: Quicksand;
     font-style: normal;
     font-weight: normal;
-    zoom:1.4;
-}  
+    padding: .5rem .5rem .5rem .5rem;
+    /* min-width: 18.5rem; */
+    max-width: 45rem;
+
+    border-radius: 10px;
+    background: rgb(255, 255, 255);
+    box-shadow: 0 14px 28px rgb(0, 0, 0, .25), 0 10px 10px rgb(0, 0, 0, 0.2);   /* TIP: MULTI SHADOWS */
+
+    display: grid;
+    grid-template-columns: 1fr; 
+    grid-template-rows: auto auto 1uto auto auto; 
+    padding-top: 15px;
+    padding-bottom: 15px;
 
 
-.make-post-tabs-div{
-   /* display: flex;                                                          issues causse dby this*/
-   /* flex-direction: row;                                                 issues causse dby this*/
-
-    transform: scaleX(.9);
-    margin-bottom: 20px;
-    margin-left: auto;
-    margin-right: auto;
-}
-.make-post-tab-1{
-   margin-right: 5px;
-}
-.make-post-tab-2{
-    margin-right: 5px;
-}
-.make-post-tab-3{
-    margin-right: 5px;
 }
 
-
-
-
-.make-post-tab-name{
-    position: absolute;
+.makePost-row{
     display: flex;
     flex-direction: row;
-
-    z-index: 1;
-    margin-top: -120px;
-    margin-left: 14%;
-
-    font-family: Quicksand;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 25px;
-    line-height: 15px;
-    text-align: center;
-    color: #848282;
-    justify-content: space-between;
-    width:400px
-}
-.make-post-tab-name-post{
-    color: #ffffff;
-}
-.make-post-tab-name-img-vid{
-    /* margin-left: 45%; */
-}
-.make-post-tab-name-other{
-    /* margin-left: 35%; */
-    margin-right: -8%;
-}
-
-
-
-  
-.post-form-div{           
-    display: flex;       
-    flex-direction: column;
     justify-content: center;
+    align-items: center;
+    margin: .5rem .5rem .5rem .5rem;
+    flex-wrap:wrap;
 }
-.post-form-name{
-    position: relative;    
-    padding: 10px 10px;                 /* size of inptu fields*/
-    margin: 0px 10px;  
-    margin-bottom: 15px;                
 
-    font-family: Quicksand;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 35px;
-    line-height: 45px;
 
+/*--------------------tab row-------------------------------*/
+#makePost-tabs-div{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
 }
-.post-form-input-title{
-    
-    position: relative;                      
+.makePost-tab-div{
+    background: #F4F4F4;
+}
+.makePost-tab{
+    /* font-weight: bold; */
+    font-size: 2rem;
+    padding-top: .3rem;
+}
+
+
+
+
+.tab-spacing{
+    width: 5px;
+}
+.tabText-div{
+    padding: var(--makePost-tab-padding);
+    border-top-left-radius: 20px ;
+    background: #2BB3FF;
+}
+.tabFile-div{
+    padding: var(--makePost-tab-padding);    
+}
+.tabURL-div{
+    padding: var(--makePost-tab-padding);
+    border-top-right-radius: 20px ;
+} 
+
+
+
+
+
+
+
+
+
+
+
+
+#makePost-input-title{
     outline: none;
     border:none;
-    border-radius: 10px;
-    z-index: 1;
+    border-radius: 5px;
     background-color: #F4F4F4    ;
-    /* border: 2px solid #F4F4F4; */
     color: #a0a0a0;
     
-    
-    /* max-width: 600px; */
-
-    padding: 15px 10px;                 /* size of inptu fields*/
+    padding: 10px 10px;                 /* size of inptu fields*/
     margin: 10px 10px;
-    margin-left: 11%;                   /*side change as screen chnages*/
-    margin-right: 10%;
+    margin-left: 7%;                   /*side change as screen chnages*/
+    margin-right: 7%;
+
+    font-family: Quicksand;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 1.3rem;
+}
+
+.makePost-input-content-text {
+    font-size: 1.1rem;
+    outline: none;
+    border:none;
+    border-radius: 5px;
+    background-color: #F4F4F4    ;
+    color: #a0a0a0;
+    height: 170px;
+    
+    padding: 10px 10px;                 /* size of inptu fields*/
+    margin: 10px 10px;
+    margin-left: 7%;                   /*side change as screen chnages*/
+    margin-right: 7%;
+    font-family: Quicksand;
+    font-style: normal;
+    font-weight: normal;
+    resize: none;
+}
+.makePost-input-content-file{
+    margin-left: 7%;                   /*side change as screen chnages*/
+    margin-right: 7%;
+}
+.makePost-input-content-url{
+    font-size: 1.1rem;
+    outline: none;
+    border:none;
+    border-radius: 5px;
+    background-color: #F4F4F4    ;
+    color: #a0a0a0;
+    
+    padding: 5px 10px;        
+    margin: 10px 10px;
+    margin-left: 7%;                   /*side change as screen chnages*/
+    margin-right: 7%;
+
     font-family: Quicksand;
     font-style: normal;
     font-weight: normal;
@@ -142,31 +174,27 @@
 
 
 
-/* parent
-    display: flex;                                     
-    flex-direction: column;                            
-    flex-wrap: wrap;                                   
-*/
-.post-form-name{
-    margin-left: auto;
-    margin-right: auto;
-}
 
 
 
 
+/*-------------------- File Content Box-----------------------*/
+/* .drag-and-drop{
+    background: red
+} */
 
-.post-form-input:focus::placeholder {
+/*-------------------------------------------*/
+
+.makePost-input:focus::placeholder {
     color: transparent;
 }
-.post-form-input:focus {
+.makePost-input:focus {
     border: 1px solid rgb(97, 97, 97);
     background-color: rgb(255, 255, 255);
     -webkit-transition: 0.2s;
     transition: 0.2s;
 }
-.post-form-input:hover {
-    /* border: 1px solid rgb(97, 97, 97); */
+.makePost-input:hover {
     background-color: rgb(248, 248, 248);
     -webkit-transition: 0.2s;
     transition: 0.2s;
@@ -183,3 +211,8 @@
               user-select: none; /* Non-prefixed version, currently
                                     supported by Chrome, Edge, Opera and Firefox */
   }
+
+  
+.makePost-input:focus{
+   
+}
