--- a/CLIENT/src/css/post.css
+++ b/CLIENT/src/css/post.css
@@ -1,261 +1,235 @@
-/* @import url('https://fonts.google.com/specimen/Quicksand?selection.family=Montserrat:wght@400;800&sidebar.open=true&query=quicksand'); */
-/* FONT qUICKSAND: added <link href='http://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css'>to indexhtml */
+/* margin-left: auto; 
+*/
+/* *{
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+        border-radius: 10px
+    } */
+    /* phone width: 380px. desktop should be about 850*/
+    :root {
+        --font-size-handleDate:   .5rem;
+        --font-size-title:       1.6rem;
+        --font-size-content:     1.2rem;
+        --font-size-like:        1.87rem;
+        --card-left-max-width:     33rem;
+        
+        --arrow-width:  2.2rem;
+        --arrow-height: 2.2rem;
+        --right-side-width: 3.3rem;
+        --left-row-margins: .5rem .5rem .5rem .5rem;
+        --left-body-row-margins: 1rem;
+    }
+    @media screen and (max-width: 600px) {
+        :root {
+            --font-size-handleDate:  .4rem;
+            --font-size-title:       1.4rem;
+            --font-size-content:     1.1rem;
+            --font-size-like:        1.7rem;
 
-.post-body{
-    zoom: .75; 
-    /* -moz-transform: scale(3); 
-    -moz-transform-origin: 0 0; */
-
-    font-family: Quicksand;
-    font-style: normal;
-    font-weight: normal;
-
-    margin-top: 10px;
-    margin-bottom: 10px;
-
-    padding-top: 20px;
-    padding-bottom: 10px;
-    padding-left: 37px;
-    padding-right: 37px;
-    width: 885px;
-
-    background: #ffffff;
-    border-radius: 20px;
-
-    display: flex; 
-    flex-direction: column; 
-}
-
-.post-rows{
-    display: flex; 
-    flex-direction: column; 
-    position: relative;
-}
-
-
-
-.post-top-container{
-    position: relative;
-    display: flex; 
-    flex-direction: row; 
-    background: white;
-
-    height: 70px;
-    width: 800px;
-
-}
-.post-top-container-left{
-    position: relative;
-    display: flex; 
-    flex-direction: row; 
-    /* margin-right: 100px */
+            --arrow-width:  2rem;
+            --arrow-height: 2rem;
+            --right-side-width: 2.4rem;
+            --left-row-margins: .4rem .4rem .4rem .4rem;
+            --left-body-row-margins: .7rem
+        }
+    }
     
-}
-.post-top-handle{    
-    font-size: 2.2rem;
-    line-height: 2.9rem;
-    font-weight: normal;
-    color: #818080;
+    @media screen and (max-width: 400px) {
+        :root {
+            --font-size-handleDate:  .5rem;
+            --font-size-title:       1.3rem;
+            --font-size-content:     1.0rem;
+            --font-size-like:        1.5rem;
+    
+            --arrow-width:  2rem;
+            --arrow-height: 2rem;
+            --right-side-width: 2.4rem;
+            --left-row-margins: .3rem .3rem .3rem .3rem;
+            --left-body-row-margins: .5rem
+        }
+    }
+                                                    
+/*----------------------------------------------------BODY/*----------------------------------------------------*/
+    .post-card-body-main{
+        font-family: Quicksand;
+        font-style: normal;
+        font-weight: normal;
 
-    padding-right: 10px;
+        margin: 1rem 1rem 1rem 1rem;
+        min-width: 14rem;
+        max-width: 38rem;
+        /* max-height: 50rem; */
 
-}
-.post-top-date{    
-    font-size: 1.4rem;
-    line-height: 1.5rem;
-    font-weight: normal;
-    color: #a1a1a1;
-    padding-right: 20px;
-    margin-top: 3px;
-} 
+        border-radius: 10px;
+        background: rgb(255, 255, 255);
+        box-shadow: 0 14px 28px rgb(0, 0, 0, .25), 0 10px 10px rgb(0, 0, 0, 0.2);   /* TIP: MULTI SHADOWS */
 
+        display: grid;
+        grid-template-columns: 1fr auto; 
+        grid-template-rows: 1fr auto; 
+    }
+    .post-card-body{
+        min-width: 12rem;
+        max-width: 37rem;
+        max-height: 50rem;
+    }
+    
+    /*----------------------------------------------------LEFT SIDE----------------------------------------------------*/
+        .post-card-left {
+            grid-column: 1/1 ;
+            grid-row: 1/1 ;
 
+            margin: .5rem;
+            margin-left: 1rem;
+            margin-right: 1rem;
+            max-width: var(--card-left-max-width);
+            overflow-x: hidden;  
+        }
+        .PCL-row{
+            margin: var(--left-row-margins);
+        }  
+       
+    /*LEFT SIDE: row-1: handle/date*/
+        .PCL-row-1{
+            display: flex;
+            flex-direction: row;
+            font-size: var(--font-size-handleDate);
+            min-height: 40px;
+            max-height: 80px;
+        }
+        .PCL-handle-date{
+            padding-left: .2rem;
+            display: flex;
+            flex-direction: row;  
+            flex-wrap: wrap;
+            align-items: center; 
+        }
+        .PCL-handle{
+            margin-right: .5rem;
+        }
+        .PCL-date{
+            color: #afafaf;        
+        }
+        .PCL-avatar{
+            min-width: 30px;
+            min-height: 30px;
+            max-width: 55px;
+            max-height: 55px;
+            padding-right: .5rem;
+        }
+    
+    /*LEFT SIDE: row-2/3: body: title/content*/
+        .PCL-body{
+            /* word-wrap: break-word; */
+            margin-left: var(--left-body-row-margins);
+            overflow: hidden;
+            text-overflow: ellipsis;
+            display: -webkit-box;
+            -webkit-box-orient: vertical;
+            -webkit-line-clamp: 2; 
+        }
+        .PCL-title{
+            font-weight: bold;
+            font-size: var(--font-size-title); 
+        }
+        .PCL-content-text{
+            font-size: var(--font-size-content); 
+            word-wrap: break-word;
+        }
+        .PCL-row-3{
+          
+        }
+        .PCL-content-img{
+            margin-top: .5rem
+        }
+        .PCL-content-img img{
+            min-height: 100%;
+            width: 100%;
+            background-repeat:no-repeat; 
+            border-radius: 10px;
+        }
+    /*LEFT SIDE: row-4:comment*/
+        .PCL-comment{
+            grid-column: 1/3 ;
+            grid-row: 2/3 ;
 
- .post-top-container-right{     
-    position: absolute;
-    display: flex; 
-    flex-direction: row; 
+            margin: 0rem .9rem .9rem .9rem;
+            display: flex;
+            flex-direction: row;  
+            justify-content:center; 
+        }
+    
+    
+    
+    /*----------------------------------------------------RIGHT SIDE----------------------------------------------------*/
+        .post-card-right{
+            grid-column: 2/3 ;
+            grid-row: 1/3 ;
 
-    margin-top: 5px;
-    margin-left: 465.4px;
-}
-.post-top-groupName{
-    position: absolute;
-    font-family: Quicksand;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 35px;
-    line-height: 45px;
+            background: #F4F4F4;
+            min-width: var(--right-side-width );
+            max-width: 5rem;
+            margin-left: auto;
+            border-top-right-radius: 10px;
+            border-bottom-right-radius: 10px;
 
-    color: white;
-}
-
-
-
-
-
-
-
-
-.post-title-content-container{
-    position: relative;
-    z-index: 1;
-}
-.post-title{
-    width: 810px;
-    height: 95px;
-    margin-left: 10px;
-
-    font-size: 30px;
-    line-height: 45px;
-    font-weight: normal;
-
-    margin-bottom: 15px;
-    color: #000000;
-}
-.post-content-img{
-    width: 810px;
-    height: 400px;
-    /* margin-left: 15px; */
-    background-size:cover;
-    background-repeat:no-repeat;
-
-    margin-bottom: 15px;
-    border-radius: 20px;
-}
-.post-content-text{
-    /* width: 810px;
-    height: 400px; */
-    /* margin-left: 15px; */
-    /* margin-top: 15px; */
-
-    margin-bottom: 15px;
-    border-radius: 20px;
-}
-
-
-
-
-
-
-
-
-
-.post-actions-constainer{
-    position: relative;
-    display: flex; 
-    flex-direction: row; 
-    margin-bottom: 15px;
-    margin-left: 15px;
-}
-.post-actions-left{
-    position: relative;
-    display: flex; 
-    flex-direction: row; 
-    /* width: 400px; */
-}
-.post-total-likes-text-div{
-    position: relative;
-    margin-left: 10px;
-    margin-right: 10px; 
-}
-
-.post-total-likes-text{
-    font-family: Quicksand;
-    Font-size: 2.5rem;
-    line-height: 2.5rem;
-    font-style: normal;
-    font-weight: normal; 
-} 
-.post-arrows{
-    width: 2.5rem;
-    height: 2.5rem;
-}
-.post-arrow-up{
-    margin-left: 0px;
-}
-.post-arrow-down{
-    margin-right: 20px;
-}
-.post-actions-left-background{
-    position: absolute;
-    margin-left: -30px;
-}
-.post-actions-left-background rect{
-    fill:white; 
-} 
-
-
-
-
-
-
-.post-comment{
-    position: absolute;
-    left: 46%;
-}
-.post-actions-right{
-    position: absolute;
-
-    display: flex; 
-    flex-direction: row; 
-    left: 85%;
-}
-.post-edit{
-    margin-right: 10px;
-}
-.post-delete{
-    margin-right: 10px;
-}
-
-.post-comment:hover {
-    transform: scale(1.2);
-}
-.post-edit:hover {
-    transform: scale(1.2);
-}
-.post-delete:hover {
-    transform: scale(1.2);
-}
-
-.post-arrows:hover {
-    transform: scale(1.2);
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-.center {
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.center-vertically {
-    /* margin: 0;
-    position: absolute;
-    top: 50%;
-    -ms-transform: translateY(-50%);
-    transform: translateY(-50%); */
-    display: flex;
-
-    justify-content: center;
-    align-items: center; 
-}
-.noselect {
-    -webkit-touch-callout: none; /* iOS Safari */
-      -webkit-user-select: none; /* Safari */
-       -khtml-user-select: none; /* Konqueror HTML */
-         -moz-user-select: none; /* Old versions of Firefox */
-          -ms-user-select: none; /* Internet Explorer/Edge */
-              user-select: none; /* Non-prefixed version, currently
-                                    supported by Chrome, Edge, Opera and Firefox */
-  }
+    
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+        .PCR-action{
+            align-items:  flex-center;
+        }
+    /*RIGHT SIDE action-1: up/down block*/
+        .PCR-action-1{
+            padding-top: 1rem;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+        .PCR-arrows{
+            width: var(--arrow-width);
+            height: var(--arrow-height);
+            min-width: 2rem;
+            min-height: 2rem;
+            margin: .1rem
+        }
+        .PCR-total-likes-text{
+            font-size: var(--font-size-like);
+            padding-left:.1rem;
+            padding-right:.1rem;
+        }
+    
+    /*RIGHT SIDE action-2: edit/delete/*/
+        .PCR-action-2{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            margin-top: .3rem;
+            margin-bottom: .2rem;
+        }
+        .PCR-edit{
+            margin-bottom: .2rem;
+        } 
+    
+    
+    .icon:hover{
+        border-radius: 2px;
+        background:rgba(207, 207, 207, 0.25);
+        background-clip: border-box;
+    }
+    .PCR-arrow-up:hover > path{
+        fill: #2BB3FF
+    }
+    .PCR-arrow-down:hover > path{
+        fill: #FF4B2B
+    }
+    
+    .PCL-comment-elem:hover{
+        transform: scale(1.02);
+    }
+    .PCL-comment-elem:hover > path {
+        fill:#2bb1ffb6
+    }
